# Principles-of-Programming-TA-Project

./: CMakeLists.txt  FindCloseFood.c  FindPath.c  ShowWinner.c  delay.c  game_map.c  hidecursor.c  load_config.c  main.c  mode_1.c  mode_2.c  move.c  move_x.c  move_y.c  moveco.c  print_map.c  prototypes.h  rand.c  read_file.h  read_from_file.c  save_scores.c  test_case_1.txt  welcome_screen.c  win.c
